--- a/templates/menu.html
+++ b/templates/menu.html
@@ -223,17 +223,17 @@
                 <img src="{%static 'images/f3.png' %}" alt="">
               </div>
               <div class="detail-box">
-                <h5>
+                <h5 class='name'>
                   Company Pizza
                 </h5>
                 <p>
                   Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque
                 </p>
                 <div class="options">
-                  <h6>
+                  <h6 class='price'>
                     $17
                   </h6>
-                  <a href="">
+                  <a onclick='getData(this)'>
                     <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
                       <g>
                         <g>
@@ -269,17 +269,17 @@
                 <img src="{%static 'images/f4.png' %}" alt="">
               </div>
               <div class="detail-box">
-                <h5>
+                <h5 class='name'>
                   Delicious Pasta
                 </h5>
                 <p>
                   Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque
                 </p>
                 <div class="options">
-                  <h6>
+                  <h6 class='price'>
                     $18
                   </h6>
-                  <a href="">
+                  <a onclick='getData(this)'>
                     <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
                       <g>
                         <g>
@@ -315,17 +315,17 @@
                 <img src="{%static 'images/f5.png' %}" alt="">
               </div>
               <div class="detail-box">
-                <h5>
+                <h5 class='name'>
                   French Fries
                 </h5>
                 <p>
                   Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque
                 </p>
                 <div class="options">
-                  <h6>
+                  <h6 class='price'>
                     $10
                   </h6>
-                  <a href="">
+                  <a onclick='getData(this)'>
                     <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
                       <g>
                         <g>
@@ -361,17 +361,17 @@
                 <img src="{%static 'images/f6.png' %}" alt="">
               </div>
               <div class="detail-box">
-                <h5>
+                <h5 class='name'>
                   4P Pizza
                 </h5>
                 <p>
                   Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque
                 </p>
                 <div class="options">
-                  <h6>
+                  <h6 class='price'>
                     $15
                   </h6>
-                  <a href="">
+                  <a onclick='getData(this)'>
                     <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
                       <g>
                         <g>
