--- a/templates/home.html
+++ b/templates/home.html
@@ -65,18 +65,15 @@
                 <a class="nav-link" href="/book">Book Table</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/login">Login</a>
-              </li>
-              <li class="nav-item">
                 <a class="nav-link" href="/register">Register</a>
               </li>
             </ul>
             <div class="user_option">
               <a>{{user_name}}</a>
-              <a href="" class="user_link">
+              <a href="/order-history/{{user_name}}" class="user_link">
                 <i class="fa fa-user" aria-hidden="true"></i>
               </a>
-              <a class="cart_link" href="/cart/">
+              <a class="cart_link" href="/cart/{{user_name}}">
                 <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
                   <g>
                     <g>
@@ -99,6 +96,7 @@
                     </g>
                 </svg>
               </a>
+              <a href="/logout/">Logout</a>
             </div>
           </div>
         </nav>
@@ -121,7 +119,7 @@
                       Doloremque, itaque aperiam facilis rerum, commodi, temporibus sapiente ad mollitia laborum quam quisquam esse error unde. Tempora ex doloremque, labore, sunt repellat dolore, iste magni quos nihil ducimus libero ipsam.
                     </p>
                     <div class="btn-box">
-                      <a href="/menu/" class="btn1">
+                      <a href="/menu/{{user_name}}" class="btn1">
                         Order Now
                       </a>
                     </div>
