--- a/templates/book.html
+++ b/templates/book.html
@@ -56,10 +56,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav  mx-auto ">
               <li class="nav-item">
-                <a class="nav-link" href="/">Home </a>
+                <a class="nav-link" href="/home/{{user_name}}">Home </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/menu">Menu</a>
+                <a class="nav-link" href="/menu/{{user_name}}">Menu</a>
               </li>
               <li class="nav-item active">
                 <a class="nav-link" href="">Book Table <span class="sr-only">(current)</span> </a>
