--- a/templates/home.html
+++ b/templates/home.html
@@ -56,13 +56,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav  mx-auto ">
               <li class="nav-item active">
-                <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/menu/{{user_name}}">Menu</a>               
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/book">Book Table</a>
+                <a class="nav-link" href="/book/{{user_name}}">Book Table</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/register">Register</a>
