--- a/templates/menu.html
+++ b/templates/menu.html
@@ -62,7 +62,7 @@
                 <a class="nav-link" href="/menu/{{user_name}}">Menu <span class="sr-only">(current)</span> </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/book">Book Table</a>
+                <a class="nav-link" href="/book/{{user_name}}">Book Table</a>
               </li>
             </ul>
             <div class="user_option">
