--- a/templates/register.html
+++ b/templates/register.html
@@ -1,7 +1,7 @@
 {%load static%}
 
 <link rel="stylesheet" type="text/css" href="{%static 'css/register.css' %}" />
-
+<title>Register</title>
 <div class="login-page">
     <div class="form">
       <form class="register-form" method = "post">
