--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {%load static%}
 
 <link rel="stylesheet" type="text/css" href="{%static 'css/register.css' %}" />
-
+<title>Login</title>
 <div class="login-page">
     <div class="form">
       <form class="login-form" method="post">
